force-app/main/default/objects/Case/fields/LXD_Adicional_solicitado_por_operativo__c.field-meta.xml
<CustomField>
    <fullName>LXD_Adicional_solicitado_por_operativo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adicional solicitado por operativo</label>
    <type>Checkbox</type>
</CustomField>