force-app/main/default/objects/Case/fields/LXD_Apellido_Materno__c.field-meta.xml
<CustomField>
    <fullName>LXD_Apellido_Materno__c</fullName>
    <label>Apellido Materno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>