force-app/main/default/objects/Case/fields/LXD_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>LXD_Aprobado__c</fullName>
    <label>Aprobado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Espera</fullName>
                <default>true</default>
                <label>Espera</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>