force-app/main/default/objects/Case/fields/LXD_Aprobador__c.field-meta.xml
<CustomField>
    <fullName>LXD_Aprobador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>