force-app/main/default/objects/Case/fields/LXD_Calle__c.field-meta.xml
<CustomField>
    <fullName>LXD_Calle__c</fullName>
    <label>Calle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>