force-app/main/default/objects/Case/fields/LXD_Canal_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>LXD_Canal_de_Venta__c</fullName>
    <label>Canal de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Canal_de_Venta</valueSetName>
    </valueSet>
</CustomField>