force-app/main/default/objects/Case/fields/LXD_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>LXD_Ciudad__c</fullName>
    <label>Ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>