force-app/main/default/objects/Case/fields/LXD_Clave_o_Numero__c.field-meta.xml
<CustomField>
    <fullName>LXD_Clave_o_Numero__c</fullName>
    <label>Clave o Número</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>