force-app/main/default/objects/Case/fields/LXD_Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>LXD_Codigo_postal__c</fullName>
    <label>Código postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>