force-app/main/default/objects/Case/fields/LXD_Comprobante_de_Domicilio__c.field-meta.xml
<CustomField>
    <fullName>LXD_Comprobante_de_Domicilio__c</fullName>
    <label>Comprobante de Domicilio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TELEFONO</fullName>
            </value>
            <value>
                <fullName>LUZ</fullName>
            </value>
            <value>
                <fullName>AGUA</fullName>
            </value>
            <value>
                <fullName>OTRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>