force-app/main/default/objects/Case/fields/LXD_Especifique_tipo_de_comporbante__c.field-meta.xml
<CustomField>
    <fullName>LXD_Especifique_tipo_de_comporbante__c</fullName>
    <label>Especifique tipo de comporbante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>