force-app/main/default/objects/Case/fields/LXD_Especifique_tipo_de_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>LXD_Especifique_tipo_de_Identificacion__c</fullName>
    <label>Tipo de Identificación Personal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>