force-app/main/default/objects/Case/fields/LXD_Estado_o_provincia__c.field-meta.xml
<CustomField>
    <fullName>LXD_Estado_o_provincia__c</fullName>
    <label>Estado o provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>