force-app/main/default/objects/Case/fields/LXD_IdAprobador__c.field-meta.xml
<CustomField>
    <fullName>LXD_IdAprobador__c</fullName>
    <label>IdAprobador</label>
    <length>18</length>
    <type>Text</type>
</CustomField>