force-app/main/default/objects/Case/fields/LXD_Identificacion_Personal__c.field-meta.xml
<CustomField>
    <fullName>LXD_Identificacion_Personal__c</fullName>
    <label>Identificacion Personal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credencial para votar (INE)</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>Licencia para conducir</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>