force-app/main/default/objects/Case/fields/LXD_Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>LXD_Nacionalidad__c</fullName>
    <label>Nacionalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Nacionalidad</valueSetName>
    </valueSet>
</CustomField>