force-app/main/default/objects/Case/fields/LXD_Nivel_de_estudios__c.field-meta.xml
<CustomField>
    <fullName>LXD_Nivel_de_estudios__c</fullName>
    <label>Nivel de estudios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Nivel_de_estudios</valueSetName>
    </valueSet>
</CustomField>