force-app/main/default/objects/Case/fields/LXD_Nombre_del_Buro__c.field-meta.xml
<CustomField>
    <fullName>LXD_Nombre_del_Buro__c</fullName>
    <label>Nombre del Buró</label>
    <length>255</length>
    <type>Text</type>
</CustomField>