force-app/main/default/objects/Case/fields/LXD_Nombre_del_Master__c.field-meta.xml
<CustomField>
    <fullName>LXD_Nombre_del_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del Master</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>