force-app/main/default/objects/Case/fields/LXD_Nombre_Master__c.field-meta.xml
<CustomField>
    <fullName>LXD_Nombre_Master__c</fullName>
    <label>Nombre Master</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LXD_Nombre_del_Master</valueSetName>
    </valueSet>
</CustomField>