force-app/main/default/objects/Case/fields/LXD_Nombre_Padre_reparaciones__c.field-meta.xml
<CustomField>
    <fullName>LXD_Nombre_Padre_reparaciones__c</fullName>
    <label>Padre para el que realizará reparaciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>