force-app/main/default/objects/Case/fields/LXD_Notificacion_15_dias__c.field-meta.xml
<CustomField>
    <fullName>LXD_Notificacion_15_dias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificación 15 días</label>
    <type>Checkbox</type>
</CustomField>