force-app/main/default/objects/Case/fields/LXD_Numero_de_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>LXD_Numero_de_Distribuidor__c</fullName>
    <formula>Account.LXD_N_Distribuidor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Distribuidor</label>
    <type>Text</type>
</CustomField>