force-app/main/default/objects/Case/fields/LXD_Numero_de_Reparador__c.field-meta.xml
<CustomField>
    <fullName>LXD_Numero_de_Reparador__c</fullName>
    <label>Número de Reparador</label>
    <length>13</length>
    <type>Text</type>
</CustomField>