force-app/main/default/objects/Case/fields/LXD_Pais__c.field-meta.xml
<CustomField>
    <fullName>LXD_Pais__c</fullName>
    <label>País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>