force-app/main/default/objects/Case/fields/LXD_Primer_Nombre__c.field-meta.xml
<CustomField>
    <fullName>LXD_Primer_Nombre__c</fullName>
    <label>Primer Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>