force-app/main/default/objects/Case/fields/LXD_Segundo_Nombre__c.field-meta.xml
<CustomField>
    <fullName>LXD_Segundo_Nombre__c</fullName>
    <label>Segundo Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>