force-app/main/default/objects/Case/fields/LXD_Subtipo__c.field-meta.xml
<CustomField>
    <fullName>LXD_Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altas de claves padres de reciente creación</fullName>
            </value>
            <value>
                <fullName>Asignación de claves padre 07 a claves de master 01</fullName>
            </value>
            <value>
                <fullName>Aclaración de Activaciones</fullName>
            </value>
            <value>
                <fullName>Creación de clave padre 07/035</fullName>
            </value>
            <value>
                <fullName>Estatus de Distribución</fullName>
            </value>
            <value>
                <fullName>NIT Suspendido por adeudo en cuenta Sky</fullName>
            </value>
            <value>
                <fullName>Seguimiento Boletín</fullName>
            </value>
            <value>
                <fullName>Seguimiento de prospecto a DI</fullName>
            </value>
            <value>
                <fullName>Activación de Módem SPBT</fullName>
            </value>
            <value>
                <fullName>Comercial (Precios y/o Paquetes) SPBT</fullName>
            </value>
            <value>
                <fullName>Módem sin Señal</fullName>
            </value>
            <value>
                <fullName>Transferencia de Saldo</fullName>
            </value>
            <value>
                <fullName>Duda Prospección</fullName>
            </value>
            <value>
                <fullName>Activación de Módem Combo</fullName>
            </value>
            <value>
                <fullName>Comercial (Precios y/o Paquetes) Combo</fullName>
            </value>
            <value>
                <fullName>Módem sin Señal Combos</fullName>
            </value>
            <value>
                <fullName>Duda Operativa Callidus</fullName>
            </value>
            <value>
                <fullName>Error de Acceso Callidus</fullName>
            </value>
            <value>
                <fullName>Falla en Sistema Callidus</fullName>
            </value>
            <value>
                <fullName>OT o SS no reflejados en Sistema</fullName>
            </value>
            <value>
                <fullName>Canalización con Soporte Administrativo</fullName>
            </value>
            <value>
                <fullName>Problemas de acceso</fullName>
            </value>
            <value>
                <fullName>Solicitud de contraseña CAS</fullName>
            </value>
            <value>
                <fullName>Validar Folio de Confirmación</fullName>
            </value>
            <value>
                <fullName>Validar Mensaje de Error</fullName>
            </value>
            <value>
                <fullName>Verificar permisos de envío de solicitud</fullName>
            </value>
            <value>
                <fullName>Aclaración de Evaluación/Calificación</fullName>
            </value>
            <value>
                <fullName>Instructor no ha reportado Curso</fullName>
            </value>
            <value>
                <fullName>Participante no aparece en reporte</fullName>
            </value>
            <value>
                <fullName>Reseteo de Evaluación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>