force-app/main/default/objects/Case/fields/LXD_Telefono_Celular__c.field-meta.xml
<CustomField>
    <fullName>LXD_Telefono_Celular__c</fullName>
    <label>Teléfono Celular</label>
    <type>Phone</type>
</CustomField>