force-app/main/default/objects/Case/fields/LXD_Tiempo_de_resolucion_del_caso__c.field-meta.xml
<CustomField>
    <fullName>LXD_Tiempo_de_resolucion_del_caso__c</fullName>
    <formula>(ClosedDate - CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de resolucion del caso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>