force-app/main/default/objects/Case/fields/LXD_Tipo_de_clave_operativa__c.field-meta.xml
<CustomField>
    <fullName>LXD_Tipo_de_clave_operativa__c</fullName>
    <label>Tipo de clave operativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Vendedor</fullName>
            </value>
            <value>
                <fullName>Gestor</fullName>
            </value>
            <value>
                <fullName>Validador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>