force-app/main/default/objects/Case/fields/LXD_Ultimo_aprobador__c.field-meta.xml
<CustomField>
    <fullName>LXD_Ultimo_aprobador__c</fullName>
    <label>Ultimo aprobador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>