force-app/main/default/objects/Case/recordTypes/LXD_Alta_Clave_Operativa.recordType-meta.xml
<RecordType>
    <fullName>LXD_Alta_Clave_Operativa</fullName>
    <active>true</active>
    <businessProcess>vlocity_cmt__Service Problem</businessProcess>
    <label>Alta Clave Operativa</label>
</RecordType>