force-app/main/default/objects/Case/recordTypes/LXD_Caso.recordType-meta.xml
<RecordType>
    <fullName>LXD_Caso</fullName>
    <active>true</active>
    <businessProcess>LXD Case Email2Case</businessProcess>
    <label>Caso</label>
</RecordType>