force-app/main/default/objects/Case/recordTypes/LXD_Caso_Email.recordType-meta.xml
<RecordType>
    <fullName>LXD_Caso_Email</fullName>
    <active>true</active>
    <businessProcess>LXD Case Email2Case</businessProcess>
    <label>Caso Email</label>
</RecordType>