force-app/main/default/objects/Case/recordTypes/LXD_Caso_perfil_adicional.recordType-meta.xml
<RecordType>
    <fullName>LXD_Caso_perfil_adicional</fullName>
    <active>true</active>
    <businessProcess>LXD_Perfil_Adicional</businessProcess>
    <label>Caso perfil adicional</label>
</RecordType>