force-app/main/default/objects/Case/listViews/Capacitacion_Case.listView-meta.xml
<ListView>
    <fullName>Capacitacion_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Capacitación</label>
    <queue>Capacitacion</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>