force-app/main/default/objects/Case/listViews/LXD_Altas_de_claves_operativas_Queue_Case.listView-meta.xml
<ListView>
    <fullName>LXD_Altas_de_claves_operativas_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.LXD_Alta_Clave_Operativa</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>equals</operation>
        <value>Alta de clave operativa</value>
    </filters>
    <label>Altas de claves operativas Queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>