force-app/main/default/objects/Case/listViews/LXD_Altas_de_claves_operativas_Queue_Case1.listView-meta.xml
<ListView>
    <fullName>LXD_Altas_de_claves_operativas_Queue_Case1</fullName>
    <filterScope>Queue</filterScope>
    <label>Altas de claves operativas Queue</label>
    <queue>LXD_Altas_de_claves_operativas_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>