force-app/main/default/objects/Case/listViews/LXD_Canal_Training_Case.listView-meta.xml
<ListView>
    <fullName>LXD_Canal_Training_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Canal Training</label>
    <queue>LXD_Canal_Training</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>