force-app/main/default/objects/Case/listViews/LXD_Email2CaseQueue_Case.listView-meta.xml
<ListView>
    <fullName>LXD_Email2CaseQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Email2Case Queue</label>
    <queue>LXD_Email2CaseQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>