force-app/main/default/objects/Case/listViews/LXD_SMAX_Case.listView-meta.xml
<ListView>
    <fullName>LXD_SMAX_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>SMAX</label>
    <queue>LXD_SMAX</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>