force-app/main/default/objects/Case/listViews/Recuperaciones_Case.listView-meta.xml
<ListView>
    <fullName>Recuperaciones_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Recuperaciones</label>
    <queue>Recuperaciones</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>