force-app/main/default/objects/Case/listViews/Reparaciones_Case.listView-meta.xml
<ListView>
    <fullName>Reparaciones_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Reparaciones</label>
    <queue>Reparaciones</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>