force-app/main/default/objects/Case/listViews/Venta_directa_Case.listView-meta.xml
<ListView>
    <fullName>Venta_directa_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Venta directa</label>
    <queue>Venta_directa</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>