force-app/main/default/objects/Case/listViews/Ventas_Master_Case.listView-meta.xml
<ListView>
    <fullName>Ventas_Master_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Ventas Master</label>
    <queue>Ventas_Master</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>